<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".fragments.InformationFragment">

    <android.support.design.widget.CoordinatorLayout

        android:id="@+id/coordinator_information"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_fragment"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/toolbar_fon" />
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/tx_address_delivery_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/address_delivery" />

            <LinearLayout
                android:id="@+id/customer_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:background="@drawable/border_field"
                android:layout_below="@+id/tx_address_delivery_title"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tx_address_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="32dp"
                    android:layout_weight="1"
                    android:gravity="center"
                     />

                <Button
                    android:id="@+id/bt_select_address_right"
                    android:layout_width="37dp"
                    android:layout_height="41dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/right" />
            </LinearLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_data"
                android:gravity="center"
                android:text="@string/date_delivery" />

            <LinearLayout

                android:id="@+id/date_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/border_field"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_left_date"
                    android:layout_width="37dp"
                    android:layout_height="41dp"
                    android:background="@drawable/left" />

                <TextView
                    android:id="@+id/tx_date_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/date_delivery" />

                <Button
                    android:id="@+id/bt_right_date"
                    android:layout_width="37dp"
                    android:layout_height="41dp"

                    android:background="@drawable/right" />
            </LinearLayout>

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_delivery"
                android:gravity="center"
                android:text="@string/time_delivery" />

            <LinearLayout
                android:id="@+id/time_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/border_field"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_left_time"
                    android:layout_width="37dp"
                    android:layout_height="41dp"
                    android:background="@drawable/left" />

                <TextView
                    android:id="@+id/tx_time_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/time_delivery" />

                <Button
                    android:id="@+id/bt_right_time"
                    android:layout_width="37dp"
                    android:layout_height="41dp"

                    android:background="@drawable/right" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"

                android:layout_marginEnd="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/border_button"
                android:text="@string/order"
                android:textColor="@color/White" />
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>